; ModuleID = '/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_do_recv.c'
source_filename = "/home/carl/AnghaBench/mongoose/test/extr_unit_test.c_do_recv.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.simple_data = type { i32, i32, i32 }
%struct.mg_connection = type { %struct.TYPE_2__ }
%struct.TYPE_2__ = type { i64, i32 }

@.str = private unnamed_addr constant [27 x i8] c"(num recv wrong: %d vs %d)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.simple_data*, %struct.mg_connection*, i8*)* @do_recv to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @do_recv(%struct.simple_data* %0, %struct.mg_connection* %1, i8* %2) #0 {
  %4 = alloca %struct.simple_data*, align 8
  %5 = alloca %struct.mg_connection*, align 8
  %6 = alloca i8*, align 8
  %7 = alloca [100 x i8], align 16
  store %struct.simple_data* %0, %struct.simple_data** %4, align 8
  store %struct.mg_connection* %1, %struct.mg_connection** %5, align 8
  store i8* %2, i8** %6, align 8
  %8 = load i8*, i8** %6, align 8
  %9 = bitcast i8* %8 to i32*
  %10 = load i32, i32* %9, align 4
  %11 = load %struct.mg_connection*, %struct.mg_connection** %5, align 8
  %12 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %11, i32 0, i32 0
  %13 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = trunc i64 %14 to i32
  %16 = icmp ne i32 %10, %15
  br i1 %16, label %17, label %33

17:                                               ; preds = %3
  %18 = getelementptr inbounds [100 x i8], [100 x i8]* %7, i64 0, i64 0
  %19 = load i8*, i8** %6, align 8
  %20 = bitcast i8* %19 to i32*
  %21 = load i32, i32* %20, align 4
  %22 = load %struct.simple_data*, %struct.simple_data** %4, align 8
  %23 = getelementptr inbounds %struct.simple_data, %struct.simple_data* %22, i32 0, i32 2
  %24 = load i32, i32* %23, align 4
  %25 = call i64 @strlen(i32 %24)
  %26 = trunc i64 %25 to i32
  %27 = call i32 @sprintf(i8* %18, i8* getelementptr inbounds ([27 x i8], [27 x i8]* @.str, i64 0, i64 0), i32 %21, i32 %26)
  %28 = load %struct.simple_data*, %struct.simple_data** %4, align 8
  %29 = getelementptr inbounds %struct.simple_data, %struct.simple_data* %28, i32 0, i32 1
  %30 = load i32, i32* %29, align 4
  %31 = getelementptr inbounds [100 x i8], [100 x i8]* %7, i64 0, i64 0
  %32 = call i32 @strcat(i32 %30, i8* %31)
  br label %53

33:                                               ; preds = %3
  %34 = load %struct.simple_data*, %struct.simple_data** %4, align 8
  %35 = getelementptr inbounds %struct.simple_data, %struct.simple_data* %34, i32 0, i32 0
  %36 = load i32, i32* %35, align 4
  %37 = load %struct.mg_connection*, %struct.mg_connection** %5, align 8
  %38 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %37, i32 0, i32 0
  %39 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %38, i32 0, i32 1
  %40 = load i32, i32* %39, align 8
  %41 = load %struct.mg_connection*, %struct.mg_connection** %5, align 8
  %42 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %41, i32 0, i32 0
  %43 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %42, i32 0, i32 0
  %44 = load i64, i64* %43, align 8
  %45 = call i32 @strncat(i32 %36, i32 %40, i64 %44)
  %46 = load %struct.mg_connection*, %struct.mg_connection** %5, align 8
  %47 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %46, i32 0, i32 0
  %48 = load %struct.mg_connection*, %struct.mg_connection** %5, align 8
  %49 = getelementptr inbounds %struct.mg_connection, %struct.mg_connection* %48, i32 0, i32 0
  %50 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %49, i32 0, i32 0
  %51 = load i64, i64* %50, align 8
  %52 = call i32 @mbuf_remove(%struct.TYPE_2__* %47, i64 %51)
  br label %53

53:                                               ; preds = %33, %17
  ret void
}

declare dso_local i32 @sprintf(i8*, i8*, i32, i32) #1

declare dso_local i64 @strlen(i32) #1

declare dso_local i32 @strcat(i32, i8*) #1

declare dso_local i32 @strncat(i32, i32, i64) #1

declare dso_local i32 @mbuf_remove(%struct.TYPE_2__*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
